# mphys-project-xrd

./: .clang-format  .gitmodules  CMakeLists.txt  example.json
libs/: CMakeLists.txt
patterns/fept/: .dummy.csv  AJA_1249_MgO-FePt-Pt_190s_XRD_Phil.ras  AJA_1249_MgO-FePt-Pt_190s_XRD_Phil_Theta_2-Theta.txt  AJA_1249_MgO-FePt-Pt_190s_XRD_Phil_Theta_2-Theta_signal.txt  FePt (bak).json  FePt.json  FePt_nonprimitive.json  MgO_Background_XRD_20_120.ras  MgO_Background_XRD_20_120_2-Theta_Omega.txt  MgO_Background_XRD_20_120_2-Theta_Omega_processed.txt  fept.gnuplot  possible_values.txt  xrd_full_pattern.csv  xrd_full_pattern_0_0_1.csv  xrd_full_pattern_1_0_0.csv  xrd_full_pattern_1_1_0.csv  xrd_full_pattern_1_1_1.csv  xrd_pattern.csv
patterns/mosaic/: mosaic.gnuplot  xrd_pattern.csv
utils/: allocator.hpp  complex.hpp  constants.hpp  io.cpp  io.hpp  math.cpp  math.hpp  matplotlib.hpp  parallel.hpp  string.cpp  string.hpp  timer.cpp  timer.hpp  types.hpp  types_format.hpp  types_json.hpp  utils.hpp
utils/data/: dataset_2d.cpp  dataset_2d.hpp
utils/gslpp/: CMakeLists.txt  error.cpp  error.hpp  integration.cpp  integration.hpp  interp.cpp  interp.hpp  interp_p.hpp  spline.cpp  spline.hpp
utils/math/: convolution.cpp  convolution.hpp  peak_finder.cpp  peak_finder.hpp
utils/optimisation/: simulated_annealing.hpp
utils/ras/: raxis.cpp
utils/templates/: array.hpp
xrd_simulation/: CMakeLists.txt  basis.cpp  basis.hpp  crystal.cpp  crystal.hpp  diffraction.cpp  diffraction.hpp  lattice.cpp  lattice.hpp  main.cpp  main_background.cpp  main_ff.cpp  main_optimisation.cpp  main_peak_finder.cpp  main_simulation.cpp
xrd_simulation/tables/: form_factor.cpp  form_factor.hpp
